CommentResponseDto was changed for using LikeDto and PostDto.